2002-03-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-command-arguments-alist): New user option.
	(w3m-additional-command-arguments): New function.
	(w3m-w3m-retrieve): Use it.
	(w3m-history-current-url-face, w3m-copy-buffer, w3m-about-header):
	Remove unused non-global variables.

2002-03-08  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-w3m-attributes) [w3mmee]: Fetch content-encoding from
	"x-w3m-content-encoding" filed.

	* shimbun/sb-impress.el (shimbun-impress-groups-alist): Follow
	the change of PC Watch page.

2002-03-07  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-w3m-cid-retrieve): Return lowercase string
	always because `w3m-image-type-alist' has lowercase keys.

2002-03-07  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* w3m.el (w3m-lynx-like-map): Switch J and K so as to behave like
	w3m.

2002-03-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* aclocal.m4 (AC_EXAMINE_PACKAGEDIR): Use `(eq 0 foo)' instead of
	`(zerop foo)' because foo might not be a number.
	(AC_PATH_ICONDIR): Ditto.

2002-03-07  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-decoder-alist): Change default commands to `gzip' and
	`bzip2' instead of `gunzip' and `bunzip2' because some broken OS
	and its environment does not work them.

2002-03-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (datadir): New variable.

2002-03-06  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-proc.el (w3m-process-filter): Modify a regexp for "Password:".

2002-03-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (install): Don't chdir to shimbun/ while installing
	shimbun modules.
	(install-icons): Don't chdir to icons/ while installing icons.

2002-03-06  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (top): Define `mew-folder-list' and
	`mew-local-folder-list' to avoid byte-compile warings.
	(mew-shimbun-goto-folder): Support Mew 3.0.54 or later.

2002-03-05  Katsumi Yamaoka  <yamaoka@jpl.org>
